--- a/WebContent/WEB-INF/zul/query/scoreFunction.zul
+++ b/WebContent/WEB-INF/zul/query/scoreFunction.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,9 +14,47 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="function"
-	use="com.jaeksoft.searchlib.web.controller.query.ScoreFunctionController">
-	<textbox width="99%" rows="2"
-		value="@{function.request.scoreFunction}">
-	</textbox>
+<window id="window"
+	apply="com.jaeksoft.searchlib.web.controller.query.ScoringComposer">
+	<listbox model="@{window$composer.advancedScore.array}"
+		selectedItem="@{window$composer.selectedScoreItem}">
+		<listhead>
+			<listheader label="Field" />
+			<listheader label="Direction" />
+			<listheader label="Weight" />
+			<listheader label="Action" />
+		</listhead>
+		<auxhead>
+			<auxheader>
+				<listbox mold="select"
+					model="@{window$composer.fieldList}"
+					selectedItem="@{window$composer.scoreItem.fieldName}" />
+			</auxheader>
+			<auxheader>
+				<listbox mold="select"
+					model="@{window$composer.directionList}"
+					selectedItem="@{window$composer.scoreItem.direction}" />
+			</auxheader>
+			<auxheader>
+				<doublebox value="@{window$composer.scoreItem.weight}" />
+			</auxheader>
+			<auxheader>
+				<button label="add" forward="onSave"
+					visible="@{window$composer.isNotSelected}" />
+				<button label="save" forward="onSave"
+					visible="@{window$composer.isSelected}" />
+				<button label="cancel" forward="onCancel"
+					visible="@{window$composer.isSelected}" />
+			</auxheader>
+		</auxhead>
+		<listitem self="@{each='item'}" value="@{item}">
+			<listcell label="@{item.fieldName}" />
+			<listcell label="@{item.direction}" />
+			<listcell label="@{item.weight}" />
+			<listcell>
+				<button tooltiptext="Erase index" forward="onRemove"
+					image="/images/action_delete.png" />
+			</listcell>
+		</listitem>
+	</listbox>
 </window>
