New feature 3487772: Advanced spell check

--- a/WebContent/WEB-INF/zul/query/result/spellchecks.zul
+++ b/WebContent/WEB-INF/zul/query/result/spellchecks.zul
@@ -31,6 +31,12 @@
 										<panelchildren>
 											<listbox
 												model="@{item.suggestions}">
+												<listhead>
+													<listheader
+														label="Term" />
+													<listheader
+														label="Frequency" />
+												</listhead>
 												<listitem
 													self="@{each=suggest}" label="@{suggest}">
 													<listcell
