--- a/WebContent/WEB-INF/zul/query/spellCheck.zul
+++ b/WebContent/WEB-INF/zul/query/spellCheck.zul
@@ -16,24 +16,57 @@
 -->
 <window id="spellcheck"
 	use="com.jaeksoft.searchlib.web.controller.query.SpellCheckController">
-	<grid model="@{spellcheck.request.spellCheckFieldList.list}"
-		rowRenderer="@{spellcheck.spellCheckFieldRenderer}">
-		<columns>
-			<column label="Field" />
-			<column label="Minimal score" />
-			<column label="Number of suggestions" />
-			<column />
-		</columns>
-		<foot visible="@{spellcheck.fieldLeft}">
-			<footer span="4">
+	<listbox model="@{spellcheck.request.spellCheckFieldList.list}"
+		selectedItem="@{spellcheck.selected}">
+		<listhead>
+			<listheader label="Field" />
+			<listheader label="Minimal score" />
+			<listheader label="Number of suggestions" />
+			<listheader label="Algorithm" />
+			<listheader />
+		</listhead>
+		<auxhead visible="@{spellcheck.fieldLeft}">
+			<auxheader>
 				<listbox mold="select"
-					selectedItem="@{spellcheck.selectedField}"
+					selectedItem="@{spellcheck.current.name}"
 					model="@{spellcheck.spellCheckFieldLeft}">
 					<listitem self="@{each=spellCheckField}"
 						label="@{spellCheckField}" />
 				</listbox>
-				<button label="add field" forward="onFieldAdd" />
-			</footer>
-		</foot>
-	</grid>
+			</auxheader>
+			<auxheader>
+				<doublebox format="0.00"
+					value="@{spellcheck.current.minScore}" />
+			</auxheader>
+			<auxheader>
+				<doublebox
+					value="@{spellcheck.current.suggestionNumber}" />
+			</auxheader>
+			<auxheader>
+				<listbox mold="select"
+					selectedItem="@{spellcheck.current.stringDistance}"
+					model="@{spellcheck.stringDistanceList}" />
+			</auxheader>
+			<auxheader>
+				<button visible="@{spellcheck.noSelection}" label="add"
+					forward="onFieldAdd" />
+				<hbox visible="@{spellcheck.selection}">
+					<button label="Save" forward="onFieldAdd" />
+					<button label="Cancel" forward="onCancel" />
+				</hbox>
+			</auxheader>
+		</auxhead>
+		<listitem self="@{each='item'}">
+			<listcell label="@{item.name}" />
+			<listcell label="@{item.minScore}" />
+			<listcell label="@{item.suggestionNumber}" />
+			<listcell label="@{item.stringDistance}" />
+			<listcell>
+				<button image="images/action_delete.png"
+					forward="onFieldRemove">
+					<custom-attributes scFieldItem="@{item}" />
+				</button>
+			</listcell>
+		</listitem>
+	</listbox>
 </window>
