--- a/WebContent/WEB-INF/zul/query/resultSearch.zul
+++ b/WebContent/WEB-INF/zul/query/resultSearch.zul
@@ -37,7 +37,7 @@
 					<row spans="1,3">
 						<label value="Query:" />
 						<label
-							value="@{result.result.searchRequest.query}" />
+							value="@{result.result.request.query}" />
 					</row>
 					<row>
 						<label value="Document(s) found:" />
@@ -49,7 +49,7 @@
 					<row>
 						<label value="Start offset:" />
 						<label
-							value="@{result.result.searchRequest.start}" />
+							value="@{result.result.request.start}" />
 						<label value="Row(s) returned:" />
 						<label value="@{result.result.documentCount}" />
 					</row>
@@ -58,7 +58,7 @@
 						<label value="@{result.result.maxScore}" />
 						<label value="Time elapsed (ms):" />
 						<label
-							value="@{result.result.searchRequest.finalTime}" />
+							value="@{result.result.request.finalTime}" />
 					</row>
 				</rows>
 			</grid>
