--- a/WebContent/WEB-INF/zul/runtime/logs.zul
+++ b/WebContent/WEB-INF/zul/runtime/logs.zul
@@ -32,7 +32,7 @@
 		</toolbar>
 		<panelchildren>
 			<hbox spacing="0" width="100%">
-				<listbox model="@{logs.logFiles}" sizedByContent="true"
+				<listbox model="@{logs.logFiles}" hflex="min"
 					selectedItem="@{logs.selectedFile}" height="400px" />
 				<textbox id="logview" multiline="true" readonly="true"
 					hflex="true" vflex="true" value="@{logs.currentLog}"
@@ -41,12 +41,18 @@
 		</panelchildren>
 	</panel>
 	<script type="text/javascript">
+
+
+
 		
 		<![CDATA[ function toTheEnd(txtBox) { var txtEle =
 		document.getElementById(txtBox); txtEle.scrollTop =
 		txtEle.scrollHeight; } function toTheBegining(txtBox) { var
 		txtEle = document.getElementById(txtBox); txtEle.scrollTop = 0;
-		} ]]>	
+		} ]]>
+		
+		
+			
 	
 		</script>
 </window>
