--- a/WebContent/WEB-INF/zul/runtime/logs.zul
+++ b/WebContent/WEB-INF/zul/runtime/logs.zul
@@ -33,7 +33,7 @@
 		<panelchildren>
 			<hbox spacing="0" width="100%">
 				<listbox model="@{logs.logFiles}" width="200px"
-					selectedItem="@{logs.selectedFile}" rows="40" />
+					selectedItem="@{logs.selectedFile}" height="400px" />
 				<textbox id="logview" multiline="true" readonly="true"
 					hflex="true" vflex="true" value="@{logs.currentLog}"
 					tooltiptext="Last 10000 lines. Use the download button if you want to see the full log" />
@@ -44,12 +44,16 @@
 
 
 
+
+
 		
 		<![CDATA[ function toTheEnd(txtBox) { var txtEle =
 		document.getElementById(txtBox); txtEle.scrollTop =
 		txtEle.scrollHeight; } function toTheBegining(txtBox) { var
 		txtEle = document.getElementById(txtBox); txtEle.scrollTop = 0;
 		} ]]>
+		
+		
 		
 		
 		
