--- a/WebContent/WEB-INF/zul/replication/index.zul
+++ b/WebContent/WEB-INF/zul/replication/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -107,6 +107,7 @@
 						label="@{item.lastReplicationThread.duration,converter='com.jaeksoft.searchlib.web.converter.DurationConverter'}" />
 					<listcell>
 						<progressmeter width="95%"
+							visible="@{item.replicationThread}"
 							value="@{item.lastReplicationThread.progress}" />
 					</listcell>
 					<listcell
